--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   camera: ^0.9.3+1
   path_provider: ^2.0.12
   flutter_native_splash: ^2.0.4
-
+  google_fonts: ^3.0.1
+  velocity_x: ^3.6.0
 
 dev_dependencies:
   flutter_test:
